-Get Top 5 -Get Top 5 via SQL Query -UI changes

--- a/RSI Judging System/RSI Judging System.csproj
+++ b/RSI Judging System/RSI Judging System.csproj
@@ -224,6 +224,7 @@
       <DependentUpon>RSIJudgingSystemEntities.edmx</DependentUpon>
       <LastGenOutput>RSIJudgingSystemEntities.cs</LastGenOutput>
     </Content>
+    <Content Include="SELECT QUERY.txt" />
     <Content Include="SRC\Background.jpg" />
     <Content Include="SRC\Logo.jpg" />
   </ItemGroup>
