--- a/RSI Judging System/RSI Judging System.csproj
+++ b/RSI Judging System/RSI Judging System.csproj
@@ -79,6 +79,27 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RankingJudge1.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge2.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge3.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge4.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge5.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge6.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RankingJudge7.cs">
+      <DependentUpon>RSIJudgingSystemEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="RSIJudgingSystemEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -142,6 +163,12 @@
     <Compile Include="TopFiveWinners.Designer.cs">
       <DependentUpon>TopFiveWinners.cs</DependentUpon>
     </Compile>
+    <Compile Include="TopTenToTopFiveWinners.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TopTenToTopFiveWinners.Designer.cs">
+      <DependentUpon>TopTenToTopFiveWinners.cs</DependentUpon>
+    </Compile>
     <Compile Include="TopTenWinners.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +193,9 @@
     </Compile>
     <EmbeddedResource Include="TopFiveWinners.resx">
       <DependentUpon>TopFiveWinners.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TopTenToTopFiveWinners.resx">
+      <DependentUpon>TopTenToTopFiveWinners.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TopTenWinners.resx">
       <DependentUpon>TopTenWinners.cs</DependentUpon>
