--- a/RSI Judging System/App.config
+++ b/RSI Judging System/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="RSIJudgingSystemEntities" connectionString="metadata=res://*/RSIJudgingSystemEntities.csdl|res://*/RSIJudgingSystemEntities.ssdl|res://*/RSIJudgingSystemEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=RSIJudgingSystem;persist security info=True;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RSIJudgingSystemEntities" connectionString="metadata=res://*/RSIJudgingSystemEntities.csdl|res://*/RSIJudgingSystemEntities.ssdl|res://*/RSIJudgingSystemEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.2;initial catalog=RSIJudgingSystem;persist security info=True;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
