--- a/RSI Judging System/App.config
+++ b/RSI Judging System/App.config
@@ -1,23 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
+    
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup>
   <connectionStrings>
-    <add name="RSIJudgingSystemEntities" connectionString="metadata=res://*/RSIJudgingSystemEntities.csdl|res://*/RSIJudgingSystemEntities.ssdl|res://*/RSIJudgingSystemEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.2;initial catalog=RSIJudgingSystem;persist security info=True;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RSIJudgingSystemEntities" connectionString="metadata=res://*/RSIJudgingSystemEntities.csdl|res://*/RSIJudgingSystemEntities.ssdl|res://*/RSIJudgingSystemEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.2;initial catalog=RSIJudgingSystem;persist security info=True;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 </configuration>
